--- a/src/common.blocks/_socials.scss
+++ b/src/common.blocks/_socials.scss
@@ -17,14 +17,14 @@
   margin-right: 30px;
 }
 
-.socials__link--first {
+.socials__link--1 {
   background: url("../../images/common.blocks/socials/fb.svg") no-repeat;
 }
 
-.socials__link--second {
+.socials__link--2 {
   background: url("../../images/common.blocks/socials/tw.svg") no-repeat 0 2px;
 }
 
-.socials__link--third {
+.socials__link--3 {
   background: url("../../images/common.blocks/socials/inst.svg") no-repeat;
 }
