--- a/src/ancillary.styles/_fonts.scss
+++ b/src/ancillary.styles/_fonts.scss
@@ -5,6 +5,7 @@
     url("../../fonts/SFProDisplay-Medium.woff") format("woff");
   font-weight: 500;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -14,6 +15,7 @@
     url("../../fonts/SFProDisplay-Heavy.woff") format("woff");
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -24,6 +26,7 @@
     url("../../fonts/SFProDisplay-UltralightItalic.woff") format("woff");
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -34,6 +37,7 @@
     url("../../fonts/SFProDisplay-RegularItalic.woff") format("woff");
   font-weight: normal;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -43,6 +47,7 @@
     url("../../fonts/SFProDisplay-Thin.woff") format("woff");
   font-weight: 100;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -52,6 +57,7 @@
     url("../../fonts/SFProDisplay-Light.woff") format("woff");
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -61,6 +67,7 @@
     url("../../fonts/SFProDisplay-BlackItalic.woff") format("woff");
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -70,6 +77,7 @@
     url("../../fonts/SFProDisplay-Bold.woff") format("woff");
   font-weight: bold;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -79,6 +87,7 @@
     url("../../fonts/SFProDisplay-Black.woff") format("woff");
   font-weight: 900;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -89,6 +98,7 @@
     url("../../fonts/SFProDisplay-SemiboldItalic.woff") format("woff");
   font-weight: 600;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -98,6 +108,7 @@
     url("../../fonts/SFProDisplay-Ultralight.woff") format("woff");
   font-weight: 200;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -107,6 +118,7 @@
     url("../../fonts/SFProDisplay-LightItalic.woff") format("woff");
   font-weight: 200;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -116,6 +128,7 @@
     url("../../fonts/SFProDisplay-ThinItalic.woff") format("woff");
   font-weight: 100;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -125,6 +138,7 @@
     url("../../fonts/SFProDisplay-MediumItalic.woff") format("woff");
   font-weight: 500;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -134,6 +148,7 @@
     url("../../fonts/SFProDisplay-Semibold.woff") format("woff");
   font-weight: 600;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -143,6 +158,7 @@
     url("../../fonts/SFProDisplay-HeavyItalic.woff") format("woff");
   font-weight: 900;
   font-style: italic;
+  font-display: swap;
 }
 
 @font-face {
@@ -152,6 +168,7 @@
     url("../../fonts/SFProDisplay-Regular.woff") format("woff");
   font-weight: normal;
   font-style: normal;
+  font-display: swap;
 }
 
 @font-face {
@@ -161,4 +178,5 @@
     url("../../fonts/SFProDisplay-BoldItalic.woff") format("woff");
   font-weight: bold;
   font-style: italic;
+  font-display: swap;
 }
