--- a/src/ancillary.styles/_vars.scss
+++ b/src/ancillary.styles/_vars.scss
@@ -4,10 +4,11 @@ $primary-font-color: #000;
 $secondary-font-color: #fff;
 
 $default-font-size: 16px;
-$main-fonts: 'SF Pro Display', sans-serif; // add default fonts list
+$main-fonts: "SF Pro Display", sans-serif; // add default fonts list
 
 %centering-flex-container {
   display: flex;
   justify-content: center;
   align-items: center;
 }
+
