--- a/src/common.blocks/services/_services.scss
+++ b/src/common.blocks/services/_services.scss
@@ -4,7 +4,6 @@
   display: flex;
   background-color: #f9f9f9;
   padding-bottom: 165px;
-
   padding-top: 170px;
 
   @media screen and (max-width: 1250px) {
@@ -31,6 +30,7 @@
   border-bottom: 1px solid #000;
   text-align: right;
   // line-height: 22px;
+  text-transform: uppercase;
 
   @media screen and (max-width: 700px) {
     width: 280px;
@@ -69,7 +69,6 @@
 
   border-bottom: 1px solid #000;
   padding-bottom: 7px;
-
   cursor: pointer;
 }
 
@@ -84,7 +83,6 @@
   width: 25px;
   height: 25px;
   border-radius: 50%;
-  outline: none;
   border: 1px solid #000;
   background-color: transparent;
 
@@ -177,7 +175,7 @@
 
 .services__list-item-text {
   @include font(400, 15px);
-  
+
   max-width: 380px;
   text-align: right;
   line-height: 140%;
