--- a/src/pages/index/index.scss
+++ b/src/pages/index/index.scss
@@ -162,21 +162,21 @@
   //   }
   // }
 
-  .swiper-slide__first {
+  .swiper-slide--1 {
     background: url("../../images/pages/index/header-section/exterior-2.jpg")
       center center no-repeat;
     background-size: cover;
     // background-position-y: -200px; // изменить картинку или позиционирование в адаптиве
   }
 
-  .swiper-slide__second {
+  .swiper-slide--2 {
     background: url("../../images/pages/index/header-section/interior-1.jpg")
       center center no-repeat;
     background-size: cover;
     // background-position-y: -200px;
   }
 
-  .swiper-slide__third {
+  .swiper-slide--3 {
     background: url("../../images/pages/index/header-section/exterior-1.jpg")
       center center no-repeat;
     background-size: cover;
@@ -214,7 +214,7 @@
 
     // line-height: 80%;
 
-    text-transform: capitalize;
+    text-transform: none;
 
     cursor: default;
 
@@ -248,7 +248,7 @@
     width: 230px;
     height: 50px;
     border: none;
-    outline: 2px solid $accent-color;
+    border: 2px solid $accent-color;
     margin-right: 80px;
     font-family: inherit;
     background-color: $accent-color;
@@ -259,7 +259,7 @@
     }
 
     &:hover {
-      outline: 2px solid darken($accent-color, 5%);
+      border: 2px solid darken($accent-color, 5%);
       color: darken(#fff, 5%);
       background-color: darken($accent-color, 5%);
       transition: 0.2s all ease;
@@ -335,37 +335,37 @@
     }
   }
 
-  .portfolio__card--first {
+  .portfolio__card--1 {
     background: url("../../images/pages/index/portfolio-section/interior-1-cut.jpg")
       center center no-repeat;
     background-size: cover;
   }
 
-  .portfolio__card--second {
+  .portfolio__card--2 {
     background: url("../../images/pages/index/portfolio-section/interior-2-cut.jpg")
       left center no-repeat;
     background-size: cover;
   }
 
-  .portfolio__card--third {
+  .portfolio__card--3 {
     background: url("../../images/pages/index/portfolio-section/exterior-1-cut.jpg")
       center center no-repeat;
     background-size: cover;
   }
 
-  .portfolio__card--fourth {
+  .portfolio__card--4 {
     background: url("../../images/pages/index/portfolio-section/interior-3-cut.jpg")
       left center no-repeat;
     background-size: cover;
   }
 
-  .portfolio__card--fifth {
+  .portfolio__card--5 {
     background: url("../../images/pages/index/portfolio-section/extrior-2.jpg")
       center center no-repeat;
     background-size: cover;
   }
 
-  .portfolio__card--second {
+  .portfolio__card--2 {
     grid-column: 2 / 4;
 
     @media screen and (max-width: 1024px) {
@@ -373,7 +373,7 @@
     }
   }
 
-  .portfolio__card--fifth {
+  .portfolio__card--5 {
     @media screen and (max-width: 1024px) {
       grid-column: 1 / 3;
     }
@@ -427,12 +427,12 @@
   }
 
   .trends__title {
-    max-width: 190px;
     @include font(600, 3.5rem);
+
+    max-width: 190px;
     // line-height: 100%; // ? заменить везде % или оставить пиксели
 
     // line-height: 80%;
-
     text-transform: capitalize;
 
     letter-spacing: 0.1rem; // ? rem или em
@@ -454,8 +454,9 @@
   }
 
   .trends__upper-text {
-    max-width: 405px;
     @include font(400, 1rem);
+
+    max-width: 405px;
     line-height: 140%;
 
     @media screen and (max-width: 1024px) {
@@ -584,11 +585,12 @@
   // }
 
   .trends__lower-text {
+    @include font(400, 1rem);
+
     max-width: 330px;
     text-align: center;
     margin-left: auto;
 
-    @include font(400, 1rem);
     line-height: 140%;
 
     @media screen and (max-width: 450px) {
@@ -602,6 +604,11 @@
 
     @media screen and (max-width: 1200px) {
       width: 100%;
+    }
+
+    @media screen and (max-width: 450px) {
+      padding-right: 20px;
+      padding-left: 20px;
     }
   }
 
@@ -654,20 +661,12 @@
     &::after {
       content: url("../../images/general.imgs/video-arrow.png");
       position: absolute;
-      left: calc(52% - 10px);
-      top: calc(50% - 11px);
-      // left: 0;
-      // top: 0;
+      left: 53%;
+      top: 50%;
+
       width: 20px;
       height: 22px;
-
-      // @extend %centering-flex-container;
-    }
-
-    @media screen and (max-width: 450px) {
-      &::after {
-        left: calc(54% - 10px);
-      }
+      transform: translate(-50%, -50%);
     }
   }
 
@@ -748,32 +747,6 @@
   //   }
   // }
 
-  .clients__arrow-wrapper {
-    display: flex;
-
-    @media screen and (max-width: 1150px) {
-      margin-right: 20px;
-    }
-
-    @media screen and (max-width: 850px) {
-      display: none;
-    }
-  }
-
-  .clients__arrow--left {
-    margin-right: 35px;
-  }
-
-  .clients__arrow {
-    transition: 0.2s all ease;
-    cursor: pointer;
-  }
-
-  .clients__arrow:hover .clients__arrow-line {
-    stroke: #f27935;
-    transition: 0.2s all ease;
-  }
-
   .clients__lower {
     padding-top: 230px;
 
@@ -807,8 +780,8 @@
     }
   }
 
-  .clients__carousel-slide--first,
-  .clients__carousel-slide--second {
+  .clients__carousel-slide--1,
+  .clients__carousel-slide--2 {
     display: none;
   }
 
@@ -822,8 +795,6 @@
     display: flex;
     flex-direction: column;
     align-items: flex-end;
-
-    // border: 1px solid #000;
   }
 
   @media screen and (max-width: 1024px) {
@@ -832,7 +803,6 @@
       width: 100%;
 
       align-items: center;
-      // justify-content: center;
     }
 
     .clients__lower--left {
@@ -853,25 +823,25 @@
     }
   }
 
-  .clients__pic--first {
+  .clients__pic--1 {
     background: url("../../images/pages/index/clients-section/person-2.jpg");
     background-size: cover;
     background-position-x: -15px;
   }
 
-  .clients__pic--second {
+  .clients__pic--2 {
     background: url("../../images/pages/index/clients-section/person-1.jpg");
     background-size: cover;
     background-position-x: -15px;
   }
 
-  .clients__pic--third {
+  .clients__pic--3 {
     background: url("../../images/pages/index/clients-section/person-3.jpg")
       center center;
     background-size: cover;
   }
 
-  .clients__pic--fourth {
+  .clients__pic--4 {
     background: url("../../images/pages/index/clients-section/person-4.jpg")
       center center;
     background-size: cover;
@@ -884,8 +854,6 @@
     width: 480px;
     margin-bottom: 35px;
     position: relative;
-
-    // line-height: 80%;
     letter-spacing: 0.03rem;
     text-transform: uppercase;
 
@@ -908,9 +876,10 @@
   }
 
   .clients__text {
+    @include font(400, 1rem);
+
     max-width: 300px;
     text-align: right;
-    @include font(400, 1rem);
     line-height: 140%;
 
     @media screen and (max-width: 520px) {
@@ -948,8 +917,6 @@
 
   .news__side {
     width: 50%;
-
-    // border: 1px solid #000;
   }
 
   @media screen and (max-width: 1100px) {
@@ -965,9 +932,6 @@
     @include font(600, 3.5rem);
 
     margin-bottom: 200px;
-
-    // line-height: 80%;
-
     text-transform: capitalize;
 
     @media screen and (max-width: 1100px) {
@@ -1027,10 +991,14 @@
     border-radius: 50%;
 
     transition: 0.2s all ease;
+    display: flex;
   }
 
   .news__accordion-arrow {
+    width: 8px;
+    height: 8px;
     display: block;
+    margin-left: 4px;
   }
 
   .news__accordion-arrow--active {
