--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -12,6 +12,8 @@
 
 .header {
   .header__lower {
+    @include section-popup-onscroll;
+
     padding-top: 210px;
     border-bottom: 1px solid rgba(000, 000, 000, 0.3);
 
@@ -46,6 +48,8 @@
 }
 
 .projects {
+  @include section-popup-onscroll;
+
   .projects__nav {
     padding-top: 70px;
     padding-bottom: 55px;
@@ -126,7 +130,6 @@
     @media screen and (max-width: 600px) {
       // grid-template-columns: repeat(1, 1fr);
       grid-gap: 20px;
-
       grid-auto-rows: minmax(200px, auto);
       padding-left: 20px;
       padding-right: 20px;
@@ -164,82 +167,41 @@
     }
   }
 
-  .projects__card--first {
-    background: url("../../images/pages/portfolio/bedroom.jpg") center center
-      no-repeat;
-    background-size: cover;
+  @for $item from 1 through 9 {
+    .projects__card--#{$item} {
+      background: url("../../images/pages/portfolio/pic-#{$item}.jpg")
+        center
+        center
+        no-repeat;
+      background-size: cover;
+    }
   }
 
-  .projects__card--second {
-    background: url("../../images/pages/portfolio/hall.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
-
-  .projects__card--third {
+  .projects__card--3 {
     grid-row: 1 / 3;
     grid-column: 3 / 3;
-    background: url("../../images/pages/portfolio/yard.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
 
-  @media screen and (max-width: 1024px) {
-    .projects__card--third {
+    @media screen and (max-width: 1024px) {
       grid-row: auto;
       grid-column: auto;
     }
   }
 
-  .projects__card--fourth {
+  .projects__card--4 {
     grid-row: 2 / 4;
     grid-column: 1 / 1;
-    background: url("../../images/pages/portfolio/sofa.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
 
-  @media screen and (max-width: 1024px) {
-    .projects__card--fourth {
+    @media screen and (max-width: 1024px) {
       grid-row: auto;
       grid-column: auto;
     }
   }
 
-  .projects__card--fifth {
-    background: url("../../images/pages/portfolio/houses.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
-
-  .projects__card--sixth {
-    background: url("../../images/pages/portfolio/white-houses.jpg") center
-      center no-repeat;
-    background-size: cover;
-  }
-
-  .projects__card--seventh {
-    background: url("../../images/pages/portfolio/building.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
-
-  .projects__card--eighth {
-    background: url("../../images/pages/portfolio/hall.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
-
-  .projects__card--nineth {
+  .projects__card--9 {
     grid-row: 4 / 4;
     grid-column: 2 / 4;
-    background: url("../../images/pages/portfolio/divan.jpg") center center
-      no-repeat;
-    background-size: cover;
-  }
 
-  @media screen and (max-width: 1024px) {
-    .projects__card--nineth {
+    @media screen and (max-width: 1024px) {
       grid-row: auto;
       grid-column: auto;
     }
