Added btn to top, minor html/scss/js changes.

--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -7,7 +7,7 @@
 @import '../../ancillary.styles/_mixins';
 @import '../../ancillary.styles/_global';
 
-// @import "../../common.blocks/btn-to-top/_btn-to-top";
+@import '../../common.blocks/btn-to-top/_btn-to-top';
 @import '../../common.blocks/header-upper/_header-upper';
 @import '../../common.blocks/services/_services';
 @import '../../common.blocks/_brands';
