--- a/src/common.blocks/services/_services.scss
+++ b/src/common.blocks/services/_services.scss
@@ -1,7 +1,4 @@
 .services {
-  @include section-popup-onscroll;
-
-  display: flex;
   padding-top: 170px;
   padding-bottom: 165px;
   background-color: #f9f9f9;
@@ -16,6 +13,12 @@
     padding-right: 0;
     padding-bottom: 85px;
   }
+}
+
+.services__wrapper {
+  @include section-popup-onscroll;
+
+  display: flex;
 }
 
 .services__left {
