--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -5,7 +5,7 @@
 @import "../../ancillary.styles/_mixins";
 @import "../../ancillary.styles/_global";
 
-// @import "../../common.blocks/btn-to-top/_btn-to-top";
+@import "../../common.blocks/btn-to-top/_btn-to-top";
 @import "../../common.blocks/header-upper/_header-upper";
 @import "../../common.blocks/_socials";
 @import "../../common.blocks/_footer";
