--- a/src/pages/portfolio/portfolio.scss
+++ b/src/pages/portfolio/portfolio.scss
@@ -7,6 +7,7 @@
 @import '../../ancillary.styles/_mixins';
 @import '../../ancillary.styles/_global';
 
+@import '../../common.blocks/btn-to-top/_btn-to-top';
 @import '../../common.blocks/header-upper/_header-upper';
 @import '../../common.blocks/_card';
 @import '../../common.blocks/_socials';
