--- a/src/common.blocks/_card.scss
+++ b/src/common.blocks/_card.scss
@@ -95,6 +95,6 @@
   }
 
   &::after {
-    content: url(../../images/white-right-arrow.png);
+    content: url('../../images/white-right-arrow.png?quality=70');
   }
 }
