--- a/src/common.blocks/btn-to-top/_btn-to-top.scss
+++ b/src/common.blocks/btn-to-top/_btn-to-top.scss
@@ -7,7 +7,7 @@
   height: 75px;
   cursor: pointer;
   visibility: hidden;
-  background: url('../../images/common.blocks/btn-to-top/arrow.png') no-repeat;
+  background: url('../../images/common.blocks/btn-to-top/arrow.png?quality=70') no-repeat;
   background-position: center center; // ?
   border: 7px solid #ece9e9;
   border-radius: 50%;
