--- a/src/common.blocks/header-upper/_header-upper.scss
+++ b/src/common.blocks/header-upper/_header-upper.scss
@@ -31,7 +31,7 @@
     width: 48px;
     height: 48px;
     visibility: visible;
-    background: url('../../images/common.blocks/header-upper/burger-white.png')
+    background: url('../../images/common.blocks/header-upper/burger-white.png?quality=70')
       no-repeat;
     border: none;
     border-radius: 50%;
@@ -105,7 +105,7 @@
     display: block;
     width: 48px;
     height: 48px;
-    background: url('../../images/common.blocks/header-upper/close.png')
+    background: url('../../images/common.blocks/header-upper/close.png?quality=70')
       no-repeat;
     border: none;
     border-radius: 50%;
