--- a/src/pages/contact/contact.scss
+++ b/src/pages/contact/contact.scss
@@ -1,4 +1,4 @@
-@import "reset.css/reset.css";
+@import '../../../node_modules/reset.css/reset.css';
 
 @import "../../ancillary.styles/_fonts";
 @import "../../ancillary.styles/_vars";
