Added readme, typographed text partly, optimized pics.

--- a/src/common.blocks/_card.scss
+++ b/src/common.blocks/_card.scss
@@ -1,6 +1,7 @@
 .card {
   position: relative;
   padding: 50px 0 60px 40px;
+  overflow: hidden;
 
   &:hover {
     z-index: 10;
@@ -17,12 +18,10 @@
   z-index: 10;
   visibility: hidden;
   background-color: #fff;
-  opacity: 0; // ?
 }
 
 .card:hover .card__info {
   visibility: visible;
-  opacity: 1; // ?
 }
 
 .card__category {
@@ -69,7 +68,7 @@
   line-height: 140%;
   text-align: center;
 
-  @media screen and (max-width: 450px) {
+  @media screen and (max-width: 1024px) {
     font-size: 0.9rem;
   }
 }
