--- a/src/pages/about/about.scss
+++ b/src/pages/about/about.scss
@@ -340,6 +340,7 @@
 
   .idea__lower-text {
     max-width: 330px;
+    padding-right: 20px;
     margin-left: auto;
     font-size: 15px;
     font-weight: normal;
