--- a/src/common.blocks/header-upper/_header-upper.scss
+++ b/src/common.blocks/header-upper/_header-upper.scss
@@ -101,7 +101,7 @@
   @media screen and (max-width: 992px) {
     position: absolute;
     top: 20px;
-    right: 20px;
+    right: 40px;
     display: block;
     width: 48px;
     height: 48px;
@@ -110,6 +110,10 @@
     border: none;
     border-radius: 50%;
     opacity: 0.9;
+  }
+
+  @media screen and (max-width: 450px) {
+    right: 20px;
   }
 }
 
@@ -141,12 +145,13 @@
 }
 
 .header__menu-item-link {
-  @include font(600, 14px, #000);
+  @include font(600, 0.9rem, #000);
 
   font-family: inherit;
   transition: 0.2s color ease;
 
   @media screen and (max-width: 992px) {
+    font-size: 1.4rem;
     color: $accent-color !important;
   }
 
