Fixed prod build.

--- a/src/common.blocks/_footer.scss
+++ b/src/common.blocks/_footer.scss
@@ -22,6 +22,11 @@
   display: block;
 }
 
+.footer__logo-img {
+  width: 141px;
+  height: 40px;
+}
+
 .footer__rights-span {
   display: block;
   margin-top: 10px;
