--- a/src/common.blocks/header-upper/_header-upper.scss
+++ b/src/common.blocks/header-upper/_header-upper.scss
@@ -64,6 +64,11 @@
   }
 }
 
+.header__logo-img {
+  width: 141px;
+  height: 40px;
+}
+
 .header__logo-architecture {
   display: block;
   margin-top: 2px;
