Renewed cfgs and modules.

--- a/src/common.blocks/_card.scss
+++ b/src/common.blocks/_card.scss
@@ -60,9 +60,10 @@
 
 .card__text {
   max-width: 330px;
-  min-height: 130px;
+  height: 140px;
   margin-right: 30px;
   margin-left: auto;
+  overflow: hidden;
   font-size: 1rem;
   font-weight: normal;
   line-height: 140%;
